Attempt to reactivate javadoc in artifact

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,6 @@ subprojects {
 
     artifacts {
         archives sourcesJar
-//        archives javadocJar
+        archives javadocJar
     }
 }
