--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-def compileLocal = false
+def compileLocal = true
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -8,7 +8,7 @@ dependencies {
     if (compileLocal)
         compile project(':api')
     else
-        compile 'com.github.badoualy:kotlogram:966cc99e8e'
+        compile 'com.github.badoualy:kotlogram:ea96630cb8'
 }
 
 repositories {
