--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     //compile 'io.reactivex:rxjava:1.0.15'
+    testCompile 'org.reflections:reflections:0.9.10'
+    testCompile 'org.apache.commons:commons-lang3:3.4'
 }
