Improved testing, added dump + test from dump

--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -7,4 +7,7 @@ dependencies {
     //compile 'io.reactivex:rxjava:1.0.15'
     testCompile 'org.reflections:reflections:0.9.10'
     testCompile 'org.apache.commons:commons-lang3:3.4'
+    testCompile 'com.google.code.gson:gson:2.5'
+    testCompile 'commons-io:commons-io:2.4'
+    testCompile 'commons-codec:commons-codec:1.10'
 }
