--- a/mtproto/build.gradle
+++ b/mtproto/build.gradle
@@ -13,3 +13,15 @@ dependencies {
 
     compile 'io.reactivex:rxjava:1.0.16'
 }
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes("Application-Name": "Kotlogram MTProto",
+                   "Specification-Title": "Kotlogram MTProto",
+                   "Implementation-Title": "com.github.badoualy.telegram.mtproto",
+                   "Implementation-Version": version)
+    }
+    baseName = "kotlogram-$project.name"
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
