--- a/tl-builder/build.gradle
+++ b/tl-builder/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'maven'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -12,3 +13,16 @@ dependencies {
 
     compile 'com.squareup:javapoet:1.6.1'
 }
+
+/*task fatJar(type: Jar) {
+    manifest {
+        attributes("Main-Class": "com.github.badoualy.telegram.tl.builder.MainKt",
+                   "Application-Name": "Kotlogram TL-Builder",
+                   "Specification-Title": "Kotlogram TL-Builder",
+                   "Implementation-Title": "com.github.badoualy.telegram.tl.builder",
+                   "Implementation-Version": version)
+    }
+    baseName = "kotlogram-$project.name"
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}*/
