--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -20,3 +20,15 @@ tasks.withType(Test) {
     scanForTestClasses = false
     include "**/*Test.class" // whatever Ant pattern matches your test class files
 }
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes("Application-Name": "Kotlogram TL",
+                   "Specification-Title": "Kotlogram TL",
+                   "Implementation-Title": "com.github.badoualy.telegram.tl",
+                   "Implementation-Version": version)
+    }
+    baseName = "kotlogram-$project.name"
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
