--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'maven'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
+    testCompile 'org.testng:testng:6.9.10'
     testCompile 'org.reflections:reflections:0.9.10'
     testCompile 'org.apache.commons:commons-lang3:3.4'
     testCompile 'com.google.code.gson:gson:2.5'
