--- a/mtproto/build.gradle
+++ b/mtproto/build.gradle
@@ -8,13 +8,15 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile 'commons-io:commons-io:2.4'
-    compile 'org.apache.commons:commons-lang3:3.4'
+    //compile 'commons-io:commons-io:2.4'
+    //compile 'org.apache.commons:commons-lang3:3.4'
 
     compile 'io.reactivex:rxjava:1.0.16'
 }
 
 task fatJar(type: Jar) {
+    group = "build"
+    description = "Generate a jar including all dependencies"
     manifest {
         attributes("Application-Name": "Kotlogram MTProto",
                    "Specification-Title": "Kotlogram MTProto",
