--- a/tl-builder/build.gradle
+++ b/tl-builder/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 }
 
 /*task fatJar(type: Jar) {
+    group = "build"
+    description = "Generate a jar including all dependencies"
     manifest {
         attributes("Main-Class": "com.github.badoualy.telegram.tl.builder.MainKt",
                    "Application-Name": "Kotlogram TL-Builder",
