--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ subprojects {
     }
 
     buildscript {
-        ext.kotlin_version = '1.0.1-2'
+        ext.kotlin_version = '1.0.2'
         repositories {
             mavenCentral()
         }
