--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -19,7 +19,7 @@ test {
 
 tasks.withType(Test) {
     scanForTestClasses = false
-    include "**/*Test.class" // whatever Ant pattern matches your test class files
+    include "**/*Test.class"
 }
 
 task fatJar(type: Jar) {
