--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'maven'
 
+sourceCompatibility = 1.8
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':mtproto')
