--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
+sourceCompatibility = 1.8
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
