--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
 
-    version = "1.0.0-RC1"
+    version = "1.0.0-RC2"
     group = 'com.github.badoualy'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = '1.7'
+    targetCompatibility = '1.7'
 
     repositories {
         jcenter()
@@ -64,7 +64,7 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.14.1'
+    gradleVersion = '4.0.1'
 }
 
 task fatJar {
