--- a/mtproto/build.gradle
+++ b/mtproto/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'maven'
 
-sourceCompatibility = 1.8
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
