--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
