--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
-sourceCompatibility = 1.8
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
