Fix bad limit when downloading files Attempt to fix #33 (reach end-of-stream) Convert samples to Kotlin (lower level to 1.7) Fix broken samples (download+stickers) Remove maven plugin on sample/tl-builder project Some refactoring/cleaning

--- a/sample/.gitignore
+++ b/sample/.gitignore
@@ -1,12 +1,10 @@
 /build
 
 # Files containing secret/personnal values
-Main.java
-auth*.key
-#src/test/java/com/github/badoualy/telegram/C.java
-*.save
+auth.key
+dc.save
+config.properties
+
+# Downloaded files...
 *.jpg
-/src/test/**/Sample*.java
-/src/main/resources/*
-tmp
-C.java
+*.webp
