--- a/tl-builder/build.gradle
+++ b/tl-builder/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.2.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.3'
 
-    compile 'com.squareup:javapoet:1.7.0'
+    compile 'com.squareup:javapoet:1.9.0'
+    compile 'com.squareup:kotlinpoet:0.5.0'
 }
 
 /*task fatJar(type: Jar) {
