--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'maven'
 
 sourceCompatibility = '1.7'
@@ -6,6 +7,9 @@ targetCompatibility = '1.7'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'io.reactivex:rxjava:1.2.0'
 
     testCompile 'org.testng:testng:6.9.10'
     testCompile 'org.reflections:reflections:0.9.10'
