--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ subprojects {
     }
 
     buildscript {
-        ext.kotlin_version = '1.1.4-3'
+        ext.kotlin_version = '1.1.50'
         repositories {
             mavenCentral()
         }
