--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 subprojects {
     apply plugin: 'java'
 
-    version = "1.0.0-RC2"
+    version = "2.0.0-beta1"
     group = 'com.github.badoualy'
 
     sourceCompatibility = '1.7'
