--- a/mtproto/build.gradle
+++ b/mtproto/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     //compile 'org.apache.commons:commons-lang3:3.4'
 
     compile 'io.reactivex:rxjava:1.2.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.4'
+    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     compile 'org.slf4j:slf4j-simple:1.7.21'
 }
 
