--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'io.reactivex.rxjava2:rxjava:2.1.4'
     compile 'io.reactivex:rxjava:1.2.0'
 
     testCompile 'org.testng:testng:6.9.10'
