--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,7 +16,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes("Application-Name": "Kotlogram API",
                    "Specification-Title": "Kotlogram API",
-                   "Implementation-Title": "com.github.badoualy.telegram.api",
+                   "Implementation-Title": "com.github.badoualy.kotlogram.api",
                    "Implementation-Version": version)
     }
     baseName = "kotlogram-$project.name"
