--- a/tl/build.gradle
+++ b/tl/build.gradle
@@ -36,7 +36,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes("Application-Name": "Kotlogram TL",
                    "Specification-Title": "Kotlogram TL",
-                   "Implementation-Title": "com.github.badoualy.telegram.tl",
+                   "Implementation-Title": "com.github.badoualy.kotlogram.tl",
                    "Implementation-Version": version)
     }
     baseName = "kotlogram-$project.name"
