--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,14 @@ subprojects {
 
     buildscript {
         ext.kotlin_version = '1.1.2-5'
+        ext.dokka_version = '0.9.16'
         repositories {
+            jcenter()
             mavenCentral()
         }
         dependencies {
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
         }
     }
 
