--- a/tl-builder/build.gradle
+++ b/tl-builder/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -14,6 +15,8 @@ dependencies {
     compile 'com.squareup:kotlinpoet:0.5.0'
 }
 
+
+mainClassName="com.github.badoualy.telegram.tl.builder.MainKt"
 /*task fatJar(type: Jar) {
     group = "build"
     description = "Generate a jar including all dependencies"
